add event click link

--- a/index.html
+++ b/index.html
@@ -3,11 +3,28 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Chimomo – Mobile App Landing Page (Dark Mode)</title>
+<title>Bitboy - Gameboy Emulator – Mobile App Landing Page (Dark Mode)</title>
 
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-
+ <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      try {
+        const result = window.AF_SMART_SCRIPT.generateOneLinkURL({
+          oneLinkURL: "https://gbaios.onelink.me/POR5/crrkp70n",
+          afParameters: {}
+        });
+        if (result && result.clickURL) {
+          // Redirect (ví dụ iOS/Android → Store)
+          setTimeout(() => {
+            window.location.href = result.clickURL;
+          }, 800);
+        }
+      } catch (e) {
+        console.error("AF Smart Script redirect error:", e);
+      }
+    });
+  </script>
 <style>
     :root {
         --primary: #6C63FF;
@@ -169,9 +186,28 @@
 
 <body>
 
+ <script>
+    window.addEventListener("DOMContentLoaded", () => {
+      try {
+        const result = window.AF_SMART_SCRIPT.generateOneLinkURL({
+          oneLinkURL: "https://gbaios.onelink.me/POR5/crrkp70n",
+          afParameters: {}
+        });
+        if (result && result.clickURL) {
+          // Redirect (ví dụ iOS/Android → Store)
+          setTimeout(() => {
+            window.location.href = result.clickURL;
+          }, 800);
+        }
+      } catch (e) {
+        console.error("AF Smart Script redirect error:", e);
+      }
+    });
+  </script>
+
 <!-- HERO -->
 <section class="hero">
-    <h1 class="hero-title">Chimomo App</h1>
+    <h1 class="hero-title">Bitboy - Gameboy Emulator App</h1>
     <p class="hero-sub">A new way to enjoy wallpapers, charging effects, and widget customization</p>
 
     <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?auto=format&w=900" alt="App Mockup">
@@ -247,8 +283,8 @@
     </details>
 
     <details>
-        <summary>Does Chimomo support iPhone?</summary>
-        <p>Absolutely. Chimomo works perfectly on iOS 15 and above.</p>
+        <summary>Does Bitboy - Gameboy Emulator support iPhone?</summary>
+        <p>Absolutely. Bitboy - Gameboy Emulator works perfectly on iOS 15 and above.</p>
     </details>
 
     <details>
@@ -261,12 +297,12 @@
 <!-- CTA -->
 <section class="cta">
     <h2>✨ Ready to Personalize Your Phone?</h2>
-    <p>Download Chimomo and start customizing now!</p>
-    <a href="#">Get Chimomo</a>
+    <p>Download Bitboy - Gameboy Emulator and start customizing now!</p>
+    <a href="#">Get Bitboy - Gameboy Emulator</a>
 </section>
 
 <footer>
-    © 2025 Chimomo App. All rights reserved.
+    © 2025 Bitboy - Gameboy Emulator App. All rights reserved.
 </footer>
 
 </body>
