--- a/index.html
+++ b/index.html
@@ -107,8 +107,8 @@ window.addEventListener("DOMContentLoaded", function() {
 <!-- HERO UI — user sẽ không thấy vì redirect xảy ra ngay -->
 <section class="hero">
     <h1 class="hero-title">Bitboy - Gameboy Emulator App</h1>
-    <p class="hero-sub">Trải nghiệm hình nền 4K, hiệu ứng sạc pin và widget tùy chỉnh theo phong cách của bạn.</p>
-    <img src="https://images.unsplash.com/photo-1526170375885-4d8ecf77b99f?auto=format&w=900" alt="App Mockup">
+    <p class="hero-sub">Retro gamepad in GBA Emulator</p>
+    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/61/ae/1a/61ae1ab4-c477-c752-e0c9-ba34552f3328/AppIcon-0-1x_U007epad-0-1-0-85-220-0.png/400x400ia-75.webp" alt="App Mockup">
 </section>
 
 <section class="section">
