--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ window.addEventListener("DOMContentLoaded", function() {
 <section class="hero">
     <h1 class="hero-title">Bitboy - Gameboy Emulator App</h1>
     <p class="hero-sub">Retro gamepad in GBA Emulator</p>
-    <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple221/v4/61/ae/1a/61ae1ab4-c477-c752-e0c9-ba34552f3328/AppIcon-0-1x_U007epad-0-1-0-85-220-0.png/400x400ia-75.webp" alt="App Mockup">
+    <img src="img/icon.png" alt="App Mockup">
 </section>
 
 <section class="section">
