--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Chimomo – Trang giới thiệu ứng dụng</title>
+  <title>Bitboy - Gameboy Emulator App</title>
   
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
@@ -32,19 +32,17 @@
 
   <script>
     function doRedirect(url) {
-      // Bắn event Lead cho Meta trước khi rời trang (rất quan trọng cho tối ưu CPA)
-      if (typeof fbq === 'function') {
-        fbq('track', 'Lead', {
-          content_name: 'Chimomo_Auto_Redirect',
-          campaign: 'unknown_meta_campaign'
-        });
-      }
+  if (typeof fbq === 'function') {
+    fbq('track', 'PageView'); // đảm bảo Pixel nhận visit
+    fbq('track', 'Lead');     // 👈 bắn Lead event
+    fbq('trackCustom', 'CompleteRegistration', { method: 'landing_page_auto' }); // 👈 event custom
+  }
 
-      // Delay nhẹ để chắc chắn event được gửi xong
-      setTimeout(function() {
-        window.location.href = url;
-      }, 150);
-    }
+  // Delay để gửi event xong rồi mới redirect qua OneLink
+  setTimeout(() => {
+    window.location.href = url;
+  }, 150);
+}
 
     document.addEventListener("DOMContentLoaded", function() {
       try {
